/**
 * You can use echo as starter project.
 */
syntax = "proto3";
package plc_link;

option go_package="plc_link/plc_link_pb";

// Connection with the plc_server.
message Connection {
	string id = 1;
	string domain = 2;
	string serviceId = 3;
}

// Contain the tag informations.
message Tag {
	string domain = 1;
	string serviceId = 2;
	string connectionId = 3;
	string name = 4;
	string typeName = 5;
	int32  offset = 6;
	int32  length = 7;
}

message Link {
	string id = 1;
	int32 frequency = 2;
	Tag source = 3;
	Tag target = 4;
}

// Link tow tag together and synchronize them at a given frequency.
message LinkRqst {
	Link lnk = 1;
}

message LinkRsp {
	bool result = 1;
}

// Unlink tags
message UnLinkRqst {
		string id = 1;
}

message UnLinkRsp {
	bool result = 1;
}

message SuspendRqst {
		string id = 1;
}

message SuspendRsp {
	bool result = 1;
}

message ResumeRqst {
		string id = 1;
}

message ResumeRsp {
	bool result = 1;
}

message StopRequest {
	
}

message StopResponse {
	
}

service PlcLinkService {
  	// Stop the server.
 	rpc Stop(StopRequest) returns (StopResponse);
	
	// Link Tow tag together and make it refresh at a given frequency in milisecond.
	rpc Link(LinkRqst) returns (LinkRsp){};
	
	// Remove link from tow task.
	rpc UnLink(UnLinkRqst) returns (UnLinkRsp){};
	
	// Suspend the synchronization of tow tags.
	rpc Suspend(SuspendRqst) returns (SuspendRsp){};
	
	// Resume the synchronization of tow tags.
	rpc Resume(ResumeRqst) returns (ResumeRsp);
}